--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 FILE = tt_um_cejmu
 #TARGET=synth_ice40
-MODULES = baverage/baverage.sv cla/cla.sv cla/cla_full_adder.sv io_serdes/io_serdes.sv
+MODULES = baverage/baverage.sv cla/cla.sv cla/cla_full_adder.sv io_serdes/io_serdes.sv rca/rca.sv rca/rca_fulladder.sv
 
 include Makefile.inc
